--- a/JSWeb-exams/Crypto-Trade/views/layouts/main.hbs
+++ b/JSWeb-exams/Crypto-Trade/views/layouts/main.hbs
@@ -1,21 +1,45 @@
 <html lang='en'>
+
   <head>
     <meta charset='UTF-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>{{title}}</title>
+    <title>Home Page - Crypto Web</title>
+    <link rel='stylesheet' href='/static/css/styles.css' />
   </head>
+
   <body>
-    <a href='/auth/login'>Login</a>
-    <a href='/auth/register'>Register</a>
-    <a href='/auth/logout'>Logout</a>
+    <header class='header'>
+      <nav>
+        <img src='/static/images/logo.png' class='logo' />
+        <ul>
+          <li><a href='#'>Home</a></li>
+          <li><a href='#'>All Crypto</a></li>
+          <li><a href='#'>Search</a></li>
+          <li><a href='#'>Create Offer</a></li>
+          <li><a href='/auth/login'>Login</a></li>
+          <li><a href='/auth/register'>Register</a></li>
+          <li><a href='/auth/logout'>Logout</a></li>
+        </ul>
+      </nav>
+    </header>
+
     {{#if errors}}
       <div>
         {{#each errors}}
-          <p>{{this}}</p>
+          <div class='errorContainer'>
+            <p>{{this}}</p>
+          </div>
         {{/each}}
       </div>
     {{/if}}
+
     {{{body}}}
+
+    <footer>
+      <p>Back-End 2022</p>
+    </footer>
+
   </body>
+
 </html>
