--- a/JSWeb-exams/Crypto-Trade/views/register.hbs
+++ b/JSWeb-exams/Crypto-Trade/views/register.hbs
@@ -1,7 +1,20 @@
-<h1>Register page</h1>
-<form method='post'>
-  <label>Username <input type='text' name='username' /></label>
-  <label>Password <input type='password' name='password' /></label>
-  <label>Repeat password <input type='password' name='repass' /></label>
-  <button>Register</button>
-</form>
+<main>
+
+
+  <div class='register-box'>
+    <h1>Register</h1>
+    <h4>It's free and only take a minute</h4>
+    <form method='post'>
+      <label>Username</label>
+      <input type='text' name='username' placeholder='Username..' />
+      <label>Email</label>
+      <input type='text' name='email' placeholder='Email..' />
+      <label>Password</label>
+      <input type='password' name='password' placeholder='Password..' />
+      <label>Confirm Password</label>
+      <input type='password' name='repass' placeholder='Confirm Password..' />
+      <input type='submit' value='Submit' />
+    </form>
+    <p>Already have an account? <a href='#'>Login here</a></p>
+  </div>
+</main>
