--- a/JSWeb-exams/Crypto-Trade/views/layouts/main.hbs
+++ b/JSWeb-exams/Crypto-Trade/views/layouts/main.hbs
@@ -15,11 +15,14 @@
         <ul>
           <li><a href='#'>Home</a></li>
           <li><a href='#'>All Crypto</a></li>
-          <li><a href='#'>Search</a></li>
-          <li><a href='#'>Create Offer</a></li>
-          <li><a href='/auth/login'>Login</a></li>
-          <li><a href='/auth/register'>Register</a></li>
-          <li><a href='/auth/logout'>Logout</a></li>
+          {{#if username}}
+            <li><a href='#'>Search</a></li>
+            <li><a href='#'>Create Offer</a></li>
+            <li><a href='/auth/logout'>Logout</a></li>
+          {{else}}
+            <li><a href='/auth/login'>Login</a></li>
+            <li><a href='/auth/register'>Register</a></li>
+          {{/if}}
         </ul>
       </nav>
     </header>
