--- a/JSWeb-exams/Crypto-Trade/views/register.hbs
+++ b/JSWeb-exams/Crypto-Trade/views/register.hbs
@@ -15,6 +15,6 @@
       <input type='password' name='repass' placeholder='Confirm Password..' />
       <input type='submit' value='Submit' />
     </form>
-    <p>Already have an account? <a href='#'>Login here</a></p>
+    <p>Already have an account? <a href='/auth/login'>Login here</a></p>
   </div>
 </main>
