--- a/JSWeb-exams/Crypto-Trade/views/layouts/main.hbs
+++ b/JSWeb-exams/Crypto-Trade/views/layouts/main.hbs
@@ -17,7 +17,7 @@
           <li><a href='#'>All Crypto</a></li>
           {{#if username}}
             <li><a href='#'>Search</a></li>
-            <li><a href='#'>Create Offer</a></li>
+            <li><a href='/create'>Create Offer</a></li>
             <li><a href='/auth/logout'>Logout</a></li>
           {{else}}
             <li><a href='/auth/login'>Login</a></li>
