Added dynamic catalog

--- a/JSWeb-exams/Crypto-Trade/views/layouts/main.hbs
+++ b/JSWeb-exams/Crypto-Trade/views/layouts/main.hbs
@@ -13,8 +13,8 @@
       <nav>
         <img src='/static/images/logo.png' class='logo' />
         <ul>
-          <li><a href='#'>Home</a></li>
-          <li><a href='#'>All Crypto</a></li>
+          <li><a href='/'>Home</a></li>
+          <li><a href='/catalog'>All Crypto</a></li>
           {{#if username}}
             <li><a href='#'>Search</a></li>
             <li><a href='/create'>Create Offer</a></li>
