added dynamic details page

--- a/JSWeb-exams/Crypto-Trade/views/partials/catalogCoin.hbs
+++ b/JSWeb-exams/Crypto-Trade/views/partials/catalogCoin.hbs
@@ -9,5 +9,5 @@
           <p><span>Payment: </span>{{paymentMethod}}</p>
         </div>
 
-        <a href="#" class="btn-details">Details</a>
+        <a href="/catalog/details/{{_id}}" class="btn-details">Details</a>
       </div>
