--- a/JSWeb-exams/Crypto-Trade/views/details.hbs
+++ b/JSWeb-exams/Crypto-Trade/views/details.hbs
@@ -14,23 +14,27 @@
           {{coin.description}}
         </p>
       </div>
-      <div class='product-btn'>
-        {{#if username}}
+      {{#if username}}
+        <div class='product-btn'>
           <!--Only for registered user and author of the publication -->
           {{#if coin.isOwner}}
             <div class='author'>
               <a href='#' class='btn-edit'>Edit</a>
               <a href='#' class='btn-delete'>Delete</a>
             </div>
-          {{else}}
-            <!-- Logged in user who has not yet buy thi s crypto-->
-            <a href='#' class='btn-buy'>Buy</a>
+          {{/if}}
+          {{#if coin.notBought}}
+            <!-- Logged in user who has not yet buy this crypto-->
+            <a href='/catalog/details/{{coin._id}}/buy' class='btn-buy'>Buy</a>
+          {{/if}}
+          
+          {{#if user.hasBought}}
+            <!-- Logged in user who has already buy this crypto-->
+            <p class='buy-message'>You already bought these crypto coins.</p>
           {{/if}}
 
-          <!-- Logged in user who has already buy this crypto-->
-          <p class='buy-message'>You already bought these crypto coins.</p>
-        {{/if}}
-      </div>
+        </div>
+      {{/if}}
     </div>
   </section>
 </main>
