--- a/JSWeb-exams/Crypto-Trade/views/details.hbs
+++ b/JSWeb-exams/Crypto-Trade/views/details.hbs
@@ -14,27 +14,25 @@
           {{coin.description}}
         </p>
       </div>
-      {{#if username}}
-        <div class='product-btn'>
-          <!--Only for registered user and author of the publication -->
-          {{#if coin.isOwner}}
-            <div class='author'>
-              <a href='#' class='btn-edit'>Edit</a>
-              <a href='#' class='btn-delete'>Delete</a>
-            </div>
-          {{/if}}
-          {{#if coin.notBought}}
-            <!-- Logged in user who has not yet buy this crypto-->
-            <a href='/catalog/details/{{coin._id}}/buy' class='btn-buy'>Buy</a>
-          {{/if}}
-          
-          {{#if user.hasBought}}
-            <!-- Logged in user who has already buy this crypto-->
-            <p class='buy-message'>You already bought these crypto coins.</p>
-          {{/if}}
-
+      <div class='product-btn'>
+        {{#if user}}
+        {{#if coin.isOwner}}
+        <div class='author'>
+          <a href='/crypto/edit/{{crypto._id}}' class='btn-edit'>Edit</a>
+          <a href='/crypto/delete/{{crypto._id}}' class='btn-delete'>Delete</a>
         </div>
-      {{/if}}
+        {{else}}
+        {{#if coin.bayer}}
+        <!-- Logged in user who has not yet buy this crypto-->
+        <p class='buy-message'>You already bought these crypto coins.</p>
+        {{else}}
+        <a href='/crypto/buy/{{coin._id}}' class='btn-buy'>Buy</a>
+        {{/if}}
+        {{/if}}
+        {{/if}}
+
+      </div>
+
     </div>
   </section>
 </main>
