--- a/JSWeb-exams/Crypto-Trade/views/layouts/main.hbs
+++ b/JSWeb-exams/Crypto-Trade/views/layouts/main.hbs
@@ -14,7 +14,7 @@
         <img src='/static/images/logo.png' class='logo' />
         <ul>
           <li><a href='/'>Home</a></li>
-          <li><a href='/catalog'>All Crypto</a></li>
+          <li><a href='/crypto/catalog'>All Crypto</a></li>
           {{#if username}}
             <li><a href='#'>Search</a></li>
             <li><a href='/crypto/create'>Create Offer</a></li>
