buy logic works propperly

--- a/JSWeb-exams/Crypto-Trade/views/details.hbs
+++ b/JSWeb-exams/Crypto-Trade/views/details.hbs
@@ -22,7 +22,7 @@
           <a href='/crypto/delete/{{crypto._id}}' class='btn-delete'>Delete</a>
         </div>
         {{else}}
-        {{#if coin.bayer}}
+        {{#if coin.bought}}
         <!-- Logged in user who has not yet buy this crypto-->
         <p class='buy-message'>You already bought these crypto coins.</p>
         {{else}}
