--- a/JSWeb-exams/Crypto-Trade/views/details.hbs
+++ b/JSWeb-exams/Crypto-Trade/views/details.hbs
@@ -16,19 +16,22 @@
       </div>
       <div class='product-btn'>
         {{#if user}}
-        {{#if coin.isOwner}}
-        <div class='author'>
-          <a href='/crypto/edit/{{crypto._id}}' class='btn-edit'>Edit</a>
-          <a href='/crypto/delete/{{crypto._id}}' class='btn-delete'>Delete</a>
-        </div>
-        {{else}}
-        {{#if coin.bought}}
-        <!-- Logged in user who has not yet buy this crypto-->
-        <p class='buy-message'>You already bought these crypto coins.</p>
-        {{else}}
-        <a href='/crypto/buy/{{coin._id}}' class='btn-buy'>Buy</a>
-        {{/if}}
-        {{/if}}
+          {{#if coin.isOwner}}
+            <div class='author'>
+              <a href='/crypto/edit/{{coin._id}}' class='btn-edit'>Edit</a>
+              <a
+                href='/crypto/delete/{{coin._id}}'
+                class='btn-delete'
+              >Delete</a>
+            </div>
+          {{else}}
+            {{#if coin.bought}}
+              <!-- Logged in user who has not yet buy this crypto-->
+              <p class='buy-message'>You already bought these crypto coins.</p>
+            {{else}}
+              <a href='/crypto/buy/{{coin._id}}' class='btn-buy'>Buy</a>
+            {{/if}}
+          {{/if}}
         {{/if}}
 
       </div>
