--- a/JSWeb-exams/Auction House/views/login.hbs
+++ b/JSWeb-exams/Auction House/views/login.hbs
@@ -1,6 +1,31 @@
-<h1>Login</h1>
-<form method='post'>
-  <label>Username <input type='text' name='username' /></label>
-  <label>Password <input type='password' name='password' /></label>
-  <button>Register</button>
-</form>
+ <main>
+
+          
+            <section id="login-section" class="narrow">
+
+                <h1 class="item">Login</h1>
+
+                <div class="item padded align-center">
+
+                    <form class="aligned" method="post" >
+
+                        <label>
+                            <span>Email</span>
+                            <input type="text" name="email">
+                        </label>
+                        <label>
+                            <span>Password</span>
+                            <input type="password" name="password">
+                        </label>
+
+                        <div class="align-center">
+                            <input class="action" type="submit" value="Sign In">
+                        </div>
+
+                    </form>
+
+                </div>
+
+            </section>
+
+        </main>
