--- a/JSWeb-exams/Auction House/views/register.hbs
+++ b/JSWeb-exams/Auction House/views/register.hbs
@@ -1,7 +1,52 @@
-<h1>Register page</h1>
-<form method='post'>
-  <label>Username <input type='text' name='username' /></label>
-  <label>Password <input type='password' name='password' /></label>
-  <label>Repeat password <input type='password' name='repass' /></label>
-  <button>Register</button>
-</form>
+   <main>
+
+            <!-- In case of error, display the following div-->
+            <!--
+
+            <div class="error-box">
+                <p>Show each error in a separate paragraph</p>
+            </div>
+
+            -->
+
+            <!-- Register Page -->
+            <section id="register-section" class="narrow">
+
+                <h1 class="item">Register</h1>
+
+                <div class="item padded align-center">
+
+                    <form class="aligned" method="post" >
+
+                        <label>
+                            <span>Email</span>
+                            <input type="text" name="email">
+                        </label>
+                        <label>
+                            <span>First name</span>
+                            <input type="text" name="firstName">
+                        </label>
+                        <label>
+                            <span>Last name</span>
+                            <input type="text" name="lastName">
+                        </label>
+                        <label>
+                            <span>Password</span>
+                            <input type="password" name="password">
+                        </label>
+                        <label>
+                            <span>Repeat Password</span>
+                            <input type="password" name="repass">
+                        </label>
+
+                        <div class="align-center">
+                            <input class="action" type="submit" value="Create Account">
+                        </div>
+
+                    </form>
+
+                </div>
+
+            </section>
+
+        </main>
