Created Auction model

--- a/JSWeb-exams/Auction House/views/layouts/main.hbs
+++ b/JSWeb-exams/Auction House/views/layouts/main.hbs
@@ -24,7 +24,7 @@
             <!-- User actions -->
             {{#if email}}
               <li class='user'>
-                <a href='#'>Publish</a>
+                <a href='/auctions/create'>Publish</a>
               </li>
               <!-- Bonus action -->
               <!--
