--- a/JSWeb-exams/Auction House/views/create.hbs
+++ b/JSWeb-exams/Auction House/views/create.hbs
@@ -3,14 +3,14 @@
     <h1 class="item">New Auction</h1>
 
     <div class="item padded align-center">
-      <form class="layout left large" method="" action="">
+      <form class="layout left large" method="post" >
         <div class="col aligned">
           <label>
             <span>Title</span>
-            <input type="text" name="" /></label>
+            <input type="text" name="title" /></label>
           <label>
             <span>Category</span>
-            <select name="">
+            <select name="category">
               <option value="estate">Real Estate</option>
               <option value="vehicles">Vehicles</option>
               <option value="furniture">Furniture</option>
@@ -20,16 +20,16 @@
           </label>
           <label>
             <span>Image URL</span>
-            <input type="text" name="" /></label>
+            <input type="text" name="imageUrl" /></label>
           <label>
             <span>Starting price</span>
-            <input type="number" name="" /></label>
+            <input type="number" name="price" /></label>
         </div>
 
         <div class="content pad-med align-center vertical">
           <label>
             <span>Description</span>
-            <textarea name=""></textarea>
+            <textarea name="description"></textarea>
           </label>
 
           <div class="align-center">
