Implemented browse logic

--- a/JSWeb-exams/Auction House/views/layouts/main.hbs
+++ b/JSWeb-exams/Auction House/views/layouts/main.hbs
@@ -19,7 +19,7 @@
         <nav class='main-nav nav-mid'>
           <ul>
             <li>
-              <a href='#'>Browse</a>
+              <a href='/auctions/catalog'>Browse</a>
             </li>
             <!-- User actions -->
             {{#if email}}
