--- a/JSWeb-exams/Auction House/views/partials/itemCard.hbs
+++ b/JSWeb-exams/Auction House/views/partials/itemCard.hbs
@@ -9,6 +9,6 @@
 
   <footer class='align-center pad-med'>
     <p>Current price: <strong>${{price}}</strong></p>
-    <a class='action' href='/auctions/details'>See details</a>
+    <a class='action' href='/auctions/details/{{_id}}'>See details</a>
   </footer>
 </li>
