--- a/JSWeb-exams/Auction House/views/details-owner.hbs
+++ b/JSWeb-exams/Auction House/views/details-owner.hbs
@@ -29,18 +29,13 @@
 
               <div>
                 <!-- If there is a bidder -->
+                {{#if hasBidders}}
                 Bid by
                 <strong>{{currentBidder}}</strong>
-
-                <!-- # Bonus: If there is a bidder -->
-                <!--
-
-                                    <a class="action pad-med cta" href="#">Close Auction</a>
-                                    
-                                    # End of Bonus -->
-
                 <!-- If there are no bids -->
+                {{else}}
                 No bids
+                {{/if}}
               </div>
             </div>
 
