--- a/JSWeb-exams/Auction House/views/details.hbs
+++ b/JSWeb-exams/Auction House/views/details.hbs
@@ -1,50 +1,52 @@
 <main>
-  {{#with item}}
-    <section id='catalog-section'>
 
-      <h1 class='item'>
-        {{title}}
-      </h1>
-      <div class='item padded'>
+  <section id='catalog-section'>
 
-        <div class='layout right large'>
+    <h1 class='item'>
+      {{item.title}}
+    </h1>
+    <div class='item padded'>
 
-          <div class='col'>
-            <img src='{{imageUrl}}' class='img-large' />
-          </div>
+      <div class='layout right large'>
 
-          <div class='content pad-med'>
+        <div class='col'>
+          <img src='{{item.imageUrl}}' class='img-large' />
+        </div>
 
-            <p>In category: <strong>{{category}}</strong></p>
-            <p>{{description}}</p>
+        <div class='content pad-med'>
 
-            <div class='align-center'>
-              <div>
-                Current price: $<strong>{{price}}</strong>
-              </div>
+          <p>In category: <strong>{{item.category}}</strong></p>
+          <p>{{item.description}}</p>
 
-              <!-- If current user can place a bid -->
+          <div class='align-center'>
+            <div>
+              Current price: $<strong>{{item.price}}</strong>
+            </div>
+            <!-- If current user can place a bid -->
+            {{#if user}}
+
               <form class='vertical' method='post'>
                 <label><span>Bid amount</span><input
                     type='number'
                     name='price'
                   /></label>
-                <input class='action' type='submit' value='Place bid'/>
+                <input class='action' type='submit' value='Place bid' />
               </form>
 
               <!-- If current user is the bidder -->
-              <div>
-                You are currently the
-                <strong>highest bidder</strong>
-                for this auction
-              </div>
-
-            </div>
-
+              {{#if item.userBidder}}
+                <div>
+                  You are currently the
+                  <strong>highest bidder</strong>
+                  for this auction
+                </div>
+              {{/if}}
+            {{/if}}
           </div>
+
         </div>
-        <footer>Listed by {{owner.email}}</footer>
       </div>
-    </section>
-  {{/with}}
+      <footer>Listed by {{owner.email}}</footer>
+    </div>
+  </section>
 </main>
