--- a/JSWeb-exams/Auction House/views/details-owner.hbs
+++ b/JSWeb-exams/Auction House/views/details-owner.hbs
@@ -3,9 +3,9 @@
     <section id='catalog-section'>
 
       <h1 class='item'>
-        Fishing Boat
+        {{title}}
         <div class='f-right'>
-          <a class='action pad-small f-left' href='#'>Edit</a>
+          <a class='action pad-small f-left' href='/auctions/edit/{{_id}}'>Edit</a>
           <a class='action pad-small f-left' href='#'>Delete</a>
         </div>
       </h1>
@@ -14,7 +14,7 @@
         <div class='layout right large'>
 
           <div class='col'>
-            <img src='/static/assets/boat.jpg' class='img-large' />
+            <img src='{{imageUrl}}' class='img-large' />
           </div>
 
           <div class='content pad-med'>
