--- a/JSWeb-exams/Auction House/views/details-owner.hbs
+++ b/JSWeb-exams/Auction House/views/details-owner.hbs
@@ -6,7 +6,7 @@
         {{title}}
         <div class='f-right'>
           <a class='action pad-small f-left' href='/auctions/edit/{{_id}}'>Edit</a>
-          <a class='action pad-small f-left' href='#'>Delete</a>
+          <a class='action pad-small f-left' href='/auctions/delete/{{_id}}'>Delete</a>
         </div>
       </h1>
       <div class='item padded'>
