--- a/JSWeb-exams/Job-Ads/views/layouts/main.hbs
+++ b/JSWeb-exams/Job-Ads/views/layouts/main.hbs
@@ -1,21 +1,67 @@
 <html lang='en'>
+
   <head>
     <meta charset='UTF-8' />
-    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>{{title}}</title>
+    <title>Home Page</title>
+
+    <!-- Do not forget to change the path to the css file -->
+    <link rel='stylesheet' href='./static/css/style.css' />
   </head>
+
   <body>
-    <a href='/auth/login'>Login</a>
-    <a href='/auth/register'>Register</a>
-    <a href='/auth/logout'>Logout</a>
-    {{#if errors}}
-      <div>
-        {{#each errors}}
-          <p>{{this}}</p>
-        {{/each}}
-      </div>
-    {{/if}}
-    {{{body}}}
+
+    <div class='box'>
+
+      <!-- In case of error, you should display div with class "error-box" -->
+      <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
+      <!--<div class="error-box">
+            <p>Error</p>
+        </div>-->
+
+      <header class='header'>
+        <article class='header-logo'>
+          <!-- Do not forget to change the path to the image -->
+          <img src='./static/img/logo.png' />
+        </article>
+        <nav class='header-nav'>
+          <ul class='header-nav-list'>
+
+            <li class='header-nav-list-item active'>
+              <a href='#' class='header-nav-list-item-link active'>Home Page</a>
+            </li>
+
+            <li class='header-nav-list-item'>
+              <a href='#' class='header-nav-list-item-link'>All ads</a>
+            </li>
+            <!-- Logged users -->
+            <li class='header-nav-list-item'>
+              <a href='#' class='header-nav-list-item-link'>Create Ad</a>
+            </li>
+            <li class='header-nav-list-item'>
+              <a href='#' class='header-nav-list-item-link'>Search</a>
+            </li>
+            <li class='header-nav-list-item'>
+              <a href='#' class='header-nav-list-item-link'>Logout</a>
+            </li>
+
+            <!-- Guest users -->
+            <li class='header-nav-list-item'>
+              <a href='#' class='header-nav-list-item-link'>Register</a>
+            </li>
+            <li class='header-nav-list-item'>
+              <a href='#' class='header-nav-list-item-link'>Login</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+
+      {{{body}}}
+
+      <footer>
+        <p>©Js Back-End Final Exam 2022</p>
+      </footer>
+    </div>
+
   </body>
+
 </html>
