--- a/JSWeb-exams/Job-Ads/views/layouts/main.hbs
+++ b/JSWeb-exams/Job-Ads/views/layouts/main.hbs
@@ -5,7 +5,7 @@
     <title>Home Page</title>
 
     <!-- Do not forget to change the path to the css file -->
-    <link rel='stylesheet' href='./static/css/style.css' />
+    <link rel='stylesheet' href='/static/css/style.css' />
   </head>
 
   <body>
@@ -21,13 +21,13 @@
       <header class='header'>
         <article class='header-logo'>
           <!-- Do not forget to change the path to the image -->
-          <img src='./static/img/logo.png' />
+          <img src='/static/img/logo.png' />
         </article>
         <nav class='header-nav'>
           <ul class='header-nav-list'>
 
             <li class='header-nav-list-item active'>
-              <a href='#' class='header-nav-list-item-link active'>Home Page</a>
+              <a href='/' class='header-nav-list-item-link active'>Home Page</a>
             </li>
 
             <li class='header-nav-list-item'>
@@ -41,19 +41,33 @@
               <a href='#' class='header-nav-list-item-link'>Search</a>
             </li>
             <li class='header-nav-list-item'>
-              <a href='#' class='header-nav-list-item-link'>Logout</a>
+              <a
+                href='/auth/logout'
+                class='header-nav-list-item-link'
+              >Logout</a>
             </li>
 
             <!-- Guest users -->
             <li class='header-nav-list-item'>
-              <a href='#' class='header-nav-list-item-link'>Register</a>
+              <a
+                href='/auth/register'
+                class='header-nav-list-item-link'
+              >Register</a>
             </li>
             <li class='header-nav-list-item'>
-              <a href='#' class='header-nav-list-item-link'>Login</a>
+              <a href='/auth/login' class='header-nav-list-item-link'>Login</a>
             </li>
           </ul>
         </nav>
       </header>
+
+      {{#if errors}}
+        {{#each errors}}
+          <div class='error-box'>
+            <p>{{this}}</p>
+          </div>
+        {{/each}}
+      {{/if}}
 
       {{{body}}}
 
