--- a/JSWeb-exams/Job-Ads/views/register.hbs
+++ b/JSWeb-exams/Job-Ads/views/register.hbs
@@ -1,7 +1,38 @@
-<h1>Register page</h1>
-<form method='post'>
-  <label>Username <input type='text' name='username' /></label>
-  <label>Password <input type='password' name='password' /></label>
-  <label>Repeat password <input type='password' name='repass' /></label>
-  <button>Register</button>
-</form>
+<main>
+  <section id='register-page'>
+
+    <article class='register-page-container'>
+      <form  method='post' class='register-page-form'>
+        <h2>Register</h2>
+        <p>Join us and find the perfect job.</p>
+
+        <label for='email'>Email:</label>
+        <input type='text' id='email' placeholder='petar@abv.bg' name='email' />
+
+        <label for='password'>Password:</label>
+        <input type='password' id='password' placeholder='******' name='password' />
+
+        <label for='repeat-password'>Repeat Password:</label>
+        <input type='password' id='repeat-password' placeholder='******' name='repass' />
+
+        <label for='description'>Briefly describe your skills:</label>
+        <input type='text' id='description' placeholder='Experience with HTML 5, CSS 3, Node.js' name='description' />
+
+        <article class='register-page-button'>
+          <button class='btn-register'>Register</button>
+        </article>
+
+        <article class='account'>
+          <p>Already have an account? <a href='/auth/login'>Sign in</a></p>
+        </article>
+
+      </form>
+
+      <article class='register-page-image'>
+        <!-- Do not forget to change the path to the image -->
+        <img src='/static/img/job.png' alt='image' />
+      </article>
+    </article>
+
+  </section>
+</main>
