--- a/JSWeb-exams/Job-Ads/views/layouts/main.hbs
+++ b/JSWeb-exams/Job-Ads/views/layouts/main.hbs
@@ -4,7 +4,6 @@
     <meta charset='UTF-8' />
     <title>Home Page</title>
 
-    <!-- Do not forget to change the path to the css file -->
     <link rel='stylesheet' href='/static/css/style.css' />
   </head>
 
@@ -12,15 +11,17 @@
 
     <div class='box'>
 
-      <!-- In case of error, you should display div with class "error-box" -->
-      <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-      <!--<div class="error-box">
-            <p>Error</p>
-        </div>-->
+      {{#if errors}}
+        {{#each errors}}
+          <div class='error-box'>
+            <p>{{this}}</p>
+          </div>
+        {{/each}}
+      {{/if}}
 
       <header class='header'>
         <article class='header-logo'>
-          <!-- Do not forget to change the path to the image -->
+
           <img src='/static/img/logo.png' />
         </article>
         <nav class='header-nav'>
@@ -33,19 +34,22 @@
             <li class='header-nav-list-item'>
               <a href='#' class='header-nav-list-item-link'>All ads</a>
             </li>
-            <!-- Logged users -->
-            <li class='header-nav-list-item'>
-              <a href='#' class='header-nav-list-item-link'>Create Ad</a>
-            </li>
-            <li class='header-nav-list-item'>
-              <a href='#' class='header-nav-list-item-link'>Search</a>
-            </li>
-            <li class='header-nav-list-item'>
-              <a
-                href='/auth/logout'
-                class='header-nav-list-item-link'
-              >Logout</a>
-            </li>
+
+            {{#if email}}
+              <!-- Logged users -->
+              <li class='header-nav-list-item'>
+                <a href='#' class='header-nav-list-item-link'>Create Ad</a>
+              </li>
+              <li class='header-nav-list-item'>
+                <a href='#' class='header-nav-list-item-link'>Search</a>
+              </li>
+              <li class='header-nav-list-item'>
+                <a
+                  href='/auth/logout'
+                  class='header-nav-list-item-link'
+                >Logout</a>
+              </li>
+            {{else}}
 
             <!-- Guest users -->
             <li class='header-nav-list-item'>
@@ -57,17 +61,10 @@
             <li class='header-nav-list-item'>
               <a href='/auth/login' class='header-nav-list-item-link'>Login</a>
             </li>
+            {{/if}}
           </ul>
         </nav>
       </header>
-
-      {{#if errors}}
-        {{#each errors}}
-          <div class='error-box'>
-            <p>{{this}}</p>
-          </div>
-        {{/each}}
-      {{/if}}
 
       {{{body}}}
 
