Added create logic

--- a/JSWeb-exams/Job-Ads/views/layouts/main.hbs
+++ b/JSWeb-exams/Job-Ads/views/layouts/main.hbs
@@ -38,7 +38,7 @@
             {{#if email}}
               <!-- Logged users -->
               <li class='header-nav-list-item'>
-                <a href='#' class='header-nav-list-item-link'>Create Ad</a>
+                <a href='/site/create' class='header-nav-list-item-link'>Create Ad</a>
               </li>
               <li class='header-nav-list-item'>
                 <a href='#' class='header-nav-list-item-link'>Search</a>
