added homeAd card

--- a/JSWeb-exams/Job-Ads/views/home.hbs
+++ b/JSWeb-exams/Job-Ads/views/home.hbs
@@ -33,15 +33,7 @@
         <!--If there are job ads in the database, show them (max 3)-->
         {{#if ads}}
           {{#each ads}}
-            <article class='intro-right-side-content'>
-              <img src='/static/img/technology.png' alt='technology' />
-              <h5>
-                <!--Put the value of the headline below-->
-                {{headline}}
-                <!--Put the value of the total number of candidates below-->
-                <span>Candidates: {{count}}</span>
-              </h5>
-            </article>
+           {{> homeAd}}
           {{/each}}
         {{else}}
           <!--If not show:-->
