--- a/JSWeb-exams/Job-Ads/views/partials/homeAd.hbs
+++ b/JSWeb-exams/Job-Ads/views/partials/homeAd.hbs
@@ -4,6 +4,6 @@
     <!--Put the value of the headline below-->
     {{headline}}
     <!--Put the value of the total number of candidates below-->
-    <span>Candidates: {{applied}}</span>
+    <span>Candidates: {{count}}</span>
   </h5>
 </article>
