--- a/JSWeb-exams/Job-Ads/views/layouts/main.hbs
+++ b/JSWeb-exams/Job-Ads/views/layouts/main.hbs
@@ -32,7 +32,7 @@
             </li>
 
             <li class='header-nav-list-item'>
-              <a href='#' class='header-nav-list-item-link'>All ads</a>
+              <a href='/site/catalog' class='header-nav-list-item-link'>All ads</a>
             </li>
 
             {{#if email}}
