--- a/JSWeb-exams/Job-Ads/views/partials/catalogAd.hbs
+++ b/JSWeb-exams/Job-Ads/views/partials/catalogAd.hbs
@@ -16,6 +16,6 @@
   </article>
 
   <article class='all-ads-card-buttons'>
-    <a href='#' class='btn-details'>Details</a>
+    <a href='/site/catalog/details/{{_id}}' class='btn-details'>Details</a>
   </article>
 </article>
