Finished details logic

--- a/JSWeb-exams/Job-Ads/views/details.hbs
+++ b/JSWeb-exams/Job-Ads/views/details.hbs
@@ -24,16 +24,17 @@
             {{#if ad.owner}}
               <a href='/site/{{ad._id}}/edit' class='btn-edit'>Edit</a>
               <a href='/site/{{ad._id}}/delete' class='btn-delete'>Delete</a>
-            {{/if}}
-            <!--logged in user who did not apply for current ad-->
-            {{#if notApplied}}
-              <a href='/site/{{ad._id}}/apply' class='btn-apply'>Apply now!</a>
-              <p class='applied-people'>Hurry up,
-                {{ad.count}}
-                people have already applied.</p>
             {{else}}
-              <!--logged in user who has already applied for current ad-->
-              <p class='already-applied'>You have already applied!</p>
+              <!--logged in user who did not apply for current ad-->
+              {{#if ad.notApplied}}
+                <a href='/site/{{ad._id}}/apply' class='btn-apply'>Apply now!</a>
+                <p class='applied-people'>Hurry up,
+                  {{ad.count}}
+                  people have already applied.</p>
+              {{else}}
+                <!--logged in user who has already applied for current ad-->
+                <p class='already-applied'>You have already applied!</p>
+              {{/if}}
             {{/if}}
           </article>
         {{/if}}
@@ -44,20 +45,23 @@
   </section>
 
   <!--This section should only be visible to the author of the current ad-->
-     {{#if ad.owner}}
-            <section id="info-about-candidates">
-                <h2>Candidates for this ad:</h2>
-                <!\--If there are people who have applied, show each of them in the following format--\>
-                <article class="info-about-candidates-card">
-                    <h2>Email: petar@abv.bg</h2>
-                    <h3>Description of the candidate's skills: Experience with HTML 5, CSS 3, Node.js</h3>
-                </article>
+  {{#if ad.owner}}
+    {{#if ad.hasApplicants}}
 
-                <article class="info-about-candidates-card">
-                    <h2>Email: ivan@abv.bg</h2>
-                    <h3>Description of the candidate's skills: Experience with Node.js</h3>
-                </article>
-                <!\--If not, you don't need to visualize anything further-\->
-            </section>
-{{/if}}
+      <section id='info-about-candidates'>
+        <h2>Candidates for this ad:</h2>
+
+        {{#each appliedUsers}}
+          <article class='info-about-candidates-card'>
+            <h2>Email: {{email}} </h2>
+            <h3>Description of the candidate's skills:
+              <strong>{{description}}</strong>
+            </h3>
+          </article>
+        {{/each}}
+
+      </section>
+
+    {{/if}}
+  {{/if}}
 </main>
