--- a/JSWeb-exams/Wildlife-Photography/views/layouts/main.hbs
+++ b/JSWeb-exams/Wildlife-Photography/views/layouts/main.hbs
@@ -1,21 +1,50 @@
 <html lang='en'>
+
   <head>
     <meta charset='UTF-8' />
-    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>{{title}}</title>
+    <title>Home Page</title>
+
+    <!-- Do not forget to change the path to the css file -->
+    <link href='/static/css/style.css' type='text/css' rel='stylesheet' />
   </head>
+
   <body>
-    <a href='/auth/login'>Login</a>
-    <a href='/auth/register'>Register</a>
-    <a href='/auth/logout'>Logout</a>
-    {{#if errors}}
-      <div>
+
+    <div id='box'>
+
+      {{#if errors}}
         {{#each errors}}
-          <p>{{this}}</p>
+          <div class='error-container'>
+            <p>{{this}}</p>
+          </div>
         {{/each}}
-      </div>
-    {{/if}}
-    {{{body}}}
+      {{/if}}
+
+      <nav>
+        <!-- Do not forget to change the path to the image -->
+        <img src='/static/img/logo.png' alt='logo' />
+
+        <ul class='menu'>
+          <li><a href='#'>Home</a></li>
+          <li><a href='#'>All Posts</a></li>
+          <!-- Logged users -->
+          <li><a href='#'>Create Post</a></li>
+          <li><a href='#'>Posts of {{email-of-user}}</a></li>
+          <li><a href='#'>Logout</a></li>
+          <!-- Guest users -->
+          <li><a href='#'>Register</a></li>
+          <li><a href='#'>Login</a></li>
+        </ul>
+
+      </nav>
+
+      {{{body}}}
+
+      <footer>
+        © Js Back-End Exam 2021
+      </footer>
+    </div>
+
   </body>
+
 </html>
