--- a/JSWeb-exams/Wildlife-Photography/views/register.hbs
+++ b/JSWeb-exams/Wildlife-Photography/views/register.hbs
@@ -1,7 +1,39 @@
-<h1>Register page</h1>
-<form method='post'>
-  <label>Username <input type='text' name='username' /></label>
-  <label>Password <input type='password' name='password' /></label>
-  <label>Repeat password <input type='password' name='repass' /></label>
-  <button>Register</button>
-</form>
+ <main>
+
+            <section id="register-page">
+                <div class="signupSection">
+                    <div class="info">
+                        <h2>To discover and share knowledge about the environment in order to preserve and enrich life.</h2>
+                    </div>
+                    <form action="#" method="" class="signupForm">
+                        <h2>Sign Up</h2>
+                        <ul class="noBullet">
+                            <li>
+                                <label for="first-name">First Name:</label>
+                                <input type="text" class="inputFields" id="first-name" name="" value="" placeholder="Alex" />
+                            </li>
+                            <li>
+                                <label for="last-name">Last Name:</label>
+                                <input type="text" class="inputFields" id="last-name" name="" value="" placeholder="Petkov" />
+                            </li>
+                            <li>
+                                <label for="email">Email:</label>
+                                <input type="text" class="inputFields" id="email" name="" value="" placeholder="alex@gmail.com" />
+                            </li>
+                            <li>
+                                <label for="password">Password:</label>
+                                <input type="password" class="inputFields" id="password" name="" placeholder="******" />
+                            </li>
+                            <li>
+                                <label for="repeat-password">Repeat-Password:</label>
+                                <input type="password" class="inputFields" id="repeat-password" name="" placeholder="******" />
+                            </li>
+                            <li id="center-btn">
+                                <button id="join-btn">Join</button>
+                            </li>
+                        </ul>
+                    </form>
+                </div>
+            </section>
+
+        </main>
