Working login and register

--- a/JSWeb-exams/Wildlife-Photography/views/layouts/main.hbs
+++ b/JSWeb-exams/Wildlife-Photography/views/layouts/main.hbs
@@ -30,10 +30,10 @@
           <!-- Logged users -->
           <li><a href='#'>Create Post</a></li>
           <li><a href='#'>Posts of {{email-of-user}}</a></li>
-          <li><a href='#'>Logout</a></li>
+          <li><a href='/auth/logout'>Logout</a></li>
           <!-- Guest users -->
-          <li><a href='#'>Register</a></li>
-          <li><a href='#'>Login</a></li>
+          <li><a href='/auth/register'>Register</a></li>
+          <li><a href='/auth/login'>Login</a></li>
         </ul>
 
       </nav>
