created post model

--- a/JSWeb-exams/Wildlife-Photography/views/layouts/main.hbs
+++ b/JSWeb-exams/Wildlife-Photography/views/layouts/main.hbs
@@ -25,15 +25,18 @@
         <img src='/static/img/logo.png' alt='logo' />
 
         <ul class='menu'>
-          <li><a href='#'>Home</a></li>
-          <li><a href='#'>All Posts</a></li>
-          <!-- Logged users -->
-          <li><a href='#'>Create Post</a></li>
-          <li><a href='#'>Posts of {{email-of-user}}</a></li>
-          <li><a href='/auth/logout'>Logout</a></li>
-          <!-- Guest users -->
-          <li><a href='/auth/register'>Register</a></li>
-          <li><a href='/auth/login'>Login</a></li>
+          <li><a href='/'>Home</a></li>
+          <li><a href='/site/catalog'>All Posts</a></li>
+          {{#if email}}
+            <!-- Logged users -->
+            <li><a href='/site/create'>Create Post</a></li>
+            <li><a href='#'>Posts of {{email-of-user}}</a></li>
+            <li><a href='/auth/logout'>Logout</a></li>
+          {{else}}
+            <!-- Guest users -->
+            <li><a href='/auth/register'>Register</a></li>
+            <li><a href='/auth/login'>Login</a></li>
+          {{/if}}
         </ul>
 
       </nav>
