--- a/JSWeb-exams/Wildlife-Photography/views/home.hbs
+++ b/JSWeb-exams/Wildlife-Photography/views/home.hbs
@@ -1,30 +1,28 @@
 <main>
 
-    <section id="home">
-        <div class="home-container">
+  <section id='home'>
+    <div class='home-container'>
 
-            <div class="short-info">
-                <h1>The best of the wildlife photography.</h1>
-                <h2>Share knowledge about the environment and enrich your life.</h2>
-            </div>
+      <div class='short-info'>
+        <h1>The best of the wildlife photography.</h1>
+        <h2>Share knowledge about the environment and enrich your life.</h2>
+      </div>
 
-        </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="home-page">
+  <section id='home-page'>
 
-        <div class="offers">
-            <!-- Do not forget to change the path to the image -->
-            <div class="col container"><img src="/static/img/nature1.jpg" alt="nature_1"></div>
-            <!-- Do not forget to change the path to the image -->
-            <div class="col container"><img src="/static/img/nature2.jpg" alt="nature_2"></div>
-            <!-- Do not forget to change the path to the image -->
-            <div class="col container"><img src="/static/img/nature3.jpg" alt="nature_3"></div>
-            <!-- Do not forget to change the path to the image -->
-            <div class="col container"><img src="/static/img/nature4.jpg" alt="nature_4"></div>
-        </div>
+    <div class='offers'>
+      <!-- Do not forget to change the path to the image -->
+      {{#each posts}}
+        <div class='col container'><img
+            src='{{imageUrl}}'
+            alt='nature_1'
+          /></div>
+      {{/each}}
+    </div>
 
-    </section>
-
+  </section>
 
 </main>
