--- a/JSWeb-exams/Wildlife-Photography/views/layouts/main.hbs
+++ b/JSWeb-exams/Wildlife-Photography/views/layouts/main.hbs
@@ -30,7 +30,7 @@
           {{#if email}}
             <!-- Logged users -->
             <li><a href='/site/create'>Create Post</a></li>
-            <li><a href='#'>Posts of {{email-of-user}}</a></li>
+            <li><a href='/site/myPosts'>Posts of {{email}}</a></li>
             <li><a href='/auth/logout'>Logout</a></li>
           {{else}}
             <!-- Guest users -->
