created up and downvote functions

--- a/JSWeb-exams/Wildlife-Photography/views/partials/myCard.hbs
+++ b/JSWeb-exams/Wildlife-Photography/views/partials/myCard.hbs
@@ -6,6 +6,6 @@
     <div class="back">
         <h2>Title: {{title}}</h2>
         <p>Description:{{description}}</p>
-        <a href="/site/{{_id}}/details" class="details">Details</a>
+        <a href="/site/details/{{_id}}" class="details">Details</a>
     </div>
 </div>
