--- a/JSWeb-exams/Wildlife-Photography/views/details.hbs
+++ b/JSWeb-exams/Wildlife-Photography/views/details.hbs
@@ -17,7 +17,7 @@
             <p class='disc'>Description: {{description}}</p>
 
             <!-- If there is no registered user, do not display buttons-->
-            
+
             <div class='social-btn'>
               {{#if owner}}
                 <!-- Only for registered user and author of the post -->
@@ -27,7 +27,10 @@
 
               <!-- logged in users, who have not yet voted-->
               <a href='/site/details/{{_id}}/upvote' class='vote-up'>UpVote</a>
-              <a href='/site/details/{{_id}}/downvote' class='vote-down'>DownVote</a>
+              <a
+                href='/site/details/{{_id}}/downvote'
+                class='vote-down'
+              >DownVote</a>
               <!-- logged in user who has already voted-->
               <p class='thanks-for-vote'>Thanks For Voting</p>
             </div>
@@ -47,7 +50,7 @@
             <h1>Votes</h1>
             <div class='card_vote'>
               <!-- Show the rating of votes, if there are no votes yet, the number must be 0. -->
-              <p class='PV'>Total rating of votes: {{votes}}</p>
+              <p class='PV'>Total rating of votes: {{rating}}</p>
             </div>
             <!-- If there are already people who have cast their vote for the post, separate their emails with a comma and a space ", " -->
             <!-- <p class="disc">People who voted for the post - alex@gmai.com, petar@gmail.com, petq@gmail.com</p>-->
