--- a/JSWeb-exams/Wildlife-Photography/views/details.hbs
+++ b/JSWeb-exams/Wildlife-Photography/views/details.hbs
@@ -6,7 +6,7 @@
         <div class='card_left'>
           <div class='card_datails'>
 
-            <h1>Title: Two golden snub-nosed monkeys</h1>
+            <h1>Title:{{title}}</h1>
             <h3>Created by an author: {{author.email}}</h3>
             <div class='card_animal'>
               <p class='card-keyword'>Keyword: {{keyword}}</p>
@@ -19,25 +19,28 @@
             <!-- If there is no registered user, do not display buttons-->
 
             <div class='social-btn'>
-              {{#if owner}}
-                <!-- Only for registered user and author of the post -->
-                <a href='#' class='edit-btn'>Edit</a>
-                <a href='#' class='del-btn'>Delete</a>
-              {{/if}}
+              {{#if email}}
+                {{#if owner}}
+                  <!-- Only for registered user and author of the post -->
+                  <a href='#' class='edit-btn'>Edit</a>
+                  <a href='#' class='del-btn'>Delete</a>
+                {{else}}
 
-              <!-- logged in users, who have not yet voted-->
-              {{#if notVoted}}
-                <a
-                  href='/site/details/{{_id}}/upvote'
-                  class='vote-up'
-                >UpVote</a>
-                <a
-                  href='/site/details/{{_id}}/downvote'
-                  class='vote-down'
-                >DownVote</a>
-              {{else}}
-                <!-- logged in user who has already voted-->
-                <p class='thanks-for-vote'>Thanks For Voting</p>
+                  <!-- logged in users, who have not yet voted-->
+                  {{#if notVoted}}
+                    <a
+                      href='/site/details/{{_id}}/upvote'
+                      class='vote-up'
+                    >UpVote</a>
+                    <a
+                      href='/site/details/{{_id}}/downvote'
+                      class='vote-down'
+                    >DownVote</a>
+                  {{else}}
+                    <!-- logged in user who has already voted-->
+                    <p class='thanks-for-vote'>Thanks For Voting</p>
+                  {{/if}}
+                {{/if}}
               {{/if}}
             </div>
           </div>
