--- a/JSWeb-exams/Wildlife-Photography/views/details.hbs
+++ b/JSWeb-exams/Wildlife-Photography/views/details.hbs
@@ -22,7 +22,7 @@
             {{#if email}}
               {{#if post.owner}}
                 <!-- Only for registered user and author of the post -->
-                <a href='#' class='edit-btn'>Edit</a>
+                <a href='/site/edit/{{post._id}}' class='edit-btn'>Edit</a>
                 <a href='#' class='del-btn'>Delete</a>
               {{else}}
 
