--- a/JSWeb-exams/Job-Ads/views/home.hbs
+++ b/JSWeb-exams/Job-Ads/views/home.hbs
@@ -5,7 +5,7 @@
       <h1>Find The Job That Fits Your Life</h1>
       <p>On this site, you can find hundreds of job offers, do not hesitate, and
         apply now.</p>
-      <a href='#' class='view-all-ads'>View all ads</a>
+      <a href='/site/catalog' class='view-all-ads'>View all ads</a>
     </article>
     <article class='home-page-image'>
 
