Static catalog + getTrips function

--- a/JSWeb-exams/Shared-Trip/views/layouts/main.hbs
+++ b/JSWeb-exams/Shared-Trip/views/layouts/main.hbs
@@ -37,7 +37,7 @@
               <a class='nav-link' href='/'>Home</a>
             </li>
             <li class='nav-item'>
-              <a class='nav-link' href='/site/sharedTrips'>Shared Trips</a>
+              <a class='nav-link' href='/site/catalog'>Shared Trips</a>
             </li>
             {{#if email}}
               <!-- Logged users -->
