implemented errors display

--- a/JSWeb-exams/Real-Estate-Agency/views/layouts/main.hbs
+++ b/JSWeb-exams/Real-Estate-Agency/views/layouts/main.hbs
@@ -13,19 +13,22 @@
 
       <!-- In case of error, you should display div with class "errorContainer" -->
       <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-
-      <!--<div>
-            <div class="errorContainer">
-                <p>Error</p>
-            </div>
-        </div>-->
+      {{#if errors}}
+        <div>
+          <div class='errorContainer'>
+            {{#each errors}}
+              <p>{{this}}</p>
+            {{/each}}
+          </div>
+        </div>
+      {{/if}}
 
       <nav>
         <a href='/'>Home</a>
         <ul>
 
           <!-- Guest users and Logged users -->
-          <li><a href='#'>Housing for rent</a></li>
+          <li><a href='/site/catalog'>Housing for rent</a></li>
           <!-- Guest users -->
           {{#unless username}}
             <li><a href='/auth/login'>Login</a></li>
