implemented rent functionality

--- a/JSWeb-exams/Real-Estate-Agency/views/details.hbs
+++ b/JSWeb-exams/Real-Estate-Agency/views/details.hbs
@@ -13,11 +13,11 @@
               <h4>Year: {{year}}</h4>
               <h4>City: {{city}}</h4>
               <p>
-                {{description}}
+                Description:{{description}}
               </p>
 
               <!-- if there are already tenants of the housing, separate their names with a comma and a space ", "  -->
-              <p>People rented this housing: Alex Petkov, Ivan Dobrev</p>
+              <p>People rented this housing:{{rented}}</p>
 
               <!-- If not display: -->
               <p>People rented this housing: There are no tenants yet.</p>
@@ -30,15 +30,14 @@
               <!-- Only for registered user and creator of the housing offer-->
               <a href='#' class='edit'>Edit</a>
               <a href='#' class='remove'>Delete</a>
+            {{else}}
+              <!-- logged in user with available pieces-->
+              <a href='/site/{{_id}}/details/rent' class='rentHome'>Rent a home,
+                available 2 housing</a>
+              <p class='alRentHome'>You have already rent this home</p>
+              <!-- logged in user with no available pieces-->
+              <p class='no-housing'>No Housing Available!</p>
             {{/if}}
-            <!-- logged in user with available pieces-->
-
-            <a href='#' class='rentHome'>Rent a home, available 2 housing</a>
-            <p class='alRentHome'>You have already rent this home</p>
-
-            <!-- logged in user with no available pieces-->
-            <p class='no-housing'>No Housing Available!</p>
-            
           </div>
         </div>
       </div>
