fixed hasRented logic

--- a/JSWeb-exams/Real-Estate-Agency/views/details.hbs
+++ b/JSWeb-exams/Real-Estate-Agency/views/details.hbs
@@ -32,14 +32,15 @@
               <a href='#' class='remove'>Delete</a>
             {{else}}
               <!-- logged in user with available pieces-->
-              <a href='/site/{{_id}}/details/rent' class='rentHome'>Rent a home,
-                available
-                {{availablePieces}}
-                housing</a>
-              {{#if hasRented}}
-                <p class='alRentHome'>You have already rent this home</p>
-              {{/if}}
+              {{#unless hasRented}}
+                <a href='/site/{{_id}}/details/rent' class='rentHome'>Rent a
+                  home, available
+                  {{availablePieces}}
+                  housing</a>
+              {{/unless}}
+              <p class='alRentHome'>You have already rent this home</p>
               <!-- logged in user with no available pieces-->
+              
               <p class='no-housing'>No Housing Available!</p>
             {{/if}}
           </div>
